<resources>
        <string name="app_name">driver</string>
        <string name="enter_your_phone_number">Enter your phone number</string>
        <string name="input_verific_ation_code">input verific ation code</string>
        <string name="verification_code">Verification code</string>
        <string name="login">login</string>
        <string name="tab_title_1">SCHEDULE</string>
        <string name="tab_title_2">ROUTE</string>
        <string name="tab_title_3">MINE</string>
        <string name="mine_title">Mine</string>
        <string name="my_wallet">My wallet</string>
        <string name="my_vehicle">My vehicle</string>
        <string name="my_verified">Verified</string>
        <string name="my_schedule">My schedule</string>
        <string name="my_setting">Setting</string>
        <string name="my_service">Service tel</string>
        <string name="verified_name">Name</string>
        <string name="verified_driving_licence">driving licence</string>
        <string name="person_title">Personal information</string>
        <string name="person_nick_name">Nickname</string>
        <string name="person_e_mail">E-mail</string>
        <string name="person_date_birth">Date of birth</string>
        <string name="person_gender">Gender</string>
        <string name="nickname_title">Nickname</string>
        <string name="save">Save</string>
        <string name="qr_code_notice">Scan the qr code and pay me</string>
        <string name="pay_records">Payment records</string>
        <string name="qr_code_title">Qr code collection</string>
        <string name="wallet_title">My wallet</string>
        <string name="wallet_withdrawal">withdrawal</string>
        <string name="wallet_unit">₱</string>
        <string name="wallet_balance">balance</string>
        <string name="wallet_qrcode">Qr code collection</string>
        <string name="wallet_income_record">Income record</string>
        <string name="wallet_withdrawals_record">Withdrawals record</string>
        <string name="wallet_bank_card">bank card</string>
        <string name="income_record_title">Income record</string>
        <string name="reset_password_title">Reset Passwords</string>
        <string name="point_cannot_empty">start and end points cannot be empty</string>
        <string name="delete_msg">Delete message</string>
        <string name="delete_msg_content">Are you sure to delete the message?</string>
        <string name="rating_fail">rating failed</string>
        <string name="order_fail">order failed</string>
        <string name="refund_fail_">refund failed</string>
        <string name="update_failed">update failed</string>
        <string name="price_sign">₱</string>
        <string name="upload_failed">upload failed</string>
        <string name="deleting">deleting</string>
        <string name="album">Select album</string>
        <string name="camera">Camera</string>
        <string name="please_wait">please wait</string>
        <string name="has_use">Has Use</string>
        <string name="effective">Effective</string>
        <string name="refunded">Refunded</string>
        <string name="ticket_price_price">1Ticket ₱ %s</string>
        <string name="buying">buying</string>
        <string name="default_amount">0.00</string>
        <string name="am_pm">am,pm</string>
        <string name="min">min</string>
        <string name="bus_already_start">Already start</string>
        <string name="phone_call">Call Phone</string>
        <string name="permissions_des">Permissions description</string>
        <string name="make_call">Are you sure to make a call %s？</string>
        <string name="authorize_permissions_prompt">You have not authorized this permission, do you jump into the settings page for authorization?</string>
        <string name="submitting">submitting</string>
        <string name="sure">Sure</string>
        <string name="message_details">Message details</string>
        <string name="sex_list">Male,Female</string>
        <string name="year_mouth_day">year,mouth,day</string>
        <string name="manually_selected_area">Manually selected area</string>
        <string name="the_current_location">The current location</string>
        <string name="please_input_correct_email_address">Please enter the correct email address</string>
        <string name="not_get_email_code">You have not yet obtained a email code</string>
        <string name="enter_email_address">Enter E-mail address</string>
        <string name="enter_security_code">Enter security Code</string>
        <string name="bind_failed">bind failed</string>
        <string name="please_enter_your_vaild_email">please enter your vaild email</string>
        <string name="binding_in">Binding...</string>
        <string name="please_input_verification_code">Please enter your current phone verification code</string>
        <string name="enter_a_new_phone_number">Enter a new phone number</string>
        <string name="binding_text">After the binding is successful, please log in with your new mobile phone number the next time you log in.</string>
        <string name="binding">Binding</string>
        <string name="get_code">Get code</string>
        <string name="enter_confirmation_code">Enter confirmation code</string>
        <string name="name">Name</string>
        <string name="updating">updating</string>
        <string name="loading">loading</string>
        <string name="reloading">Click the icon to load</string>
        <string name="request_failed">request failed</string>
        <string name="network_error">Network connection failed Please check your network settings</string>
        <string name="top_sites">Top sites</string>
        <string name="bill_details">Billing details</string>
        <string name="enter_name">Enter name</string>
        <string name="items">Items</string>
        <string name="order_number">Order Number</string>
        <string name="status">Status</string>
        <string name="time">Time</string>
        <string name="amount">Amount</string>
        <string name="transactions">TRANSACTIONS</string>
        <string name="click_agree">Click top up to indicate that you agree</string>
        <string name="recharge_agreement">《User recharge agreement》</string>
        <string name="recharge_mode">recharge mode1,recharge mode2,recharge mode3</string>
        <string name="echarge">Echarge</string>
        <string name="recharge_amount_list">₱ 50.00,₱ 100.00,₱ 200.00,₱ 500.00,₱ 1000.00,₱ 2000.00</string>
        <string name="select_recharge_amount">Select recharge amount</string>
        <string name="select_recharge_mode">Select recharge mode</string>
        <string name="beneficiary">Beneficiary</string>
        <string name="recharge">Recharge</string>
        <string name="balance">balance</string>
        <string name="komutr_pay">KOMUTRPAY</string>
        <string name="enter_search_location">Enter search location</string>
        <string name="bill">BILL</string>
        <string name="scan_code_payment">Scan code payment</string>
        <string name="scan_text_one">Scan QR code</string>
        <string name="scan_text">Put in the box and scan automatically</string>
        <string name="submit">Submit</string>
        <string name="comment_content">Type in what you want to say</string>
        <string name="delete_order_content">The order will not be recovered after it is deleted. Shall we continue to delete it?</string>
        <string name="ticket_confirmation_content">The refund at a ticket will be deducted %s booking fee, whether or not to continue the ticket?</string>
        <string name="refund">Refund</string>
        <string name="no">NO</string>
        <string name="yes">YES</string>
        <string name="order_details">Order details</string>
        <string name="did_not_score">Did not score</string>
        <string name="refund_instructions">User rRefund instructions</string>
        <string name="departure_time">Departure time</string>
        <string name="license_plate_no_">License plate No</string>
        <string name="ticket_price_">Ticket Price</string>
        <string name="order_id">OrderID</string>
        <string name="user_ratings">User ratings</string>
        <string name="view_details">View details</string>
        <string name="refund_amount">Refund amount</string>
        <string name="deduct_expenses">Deduct expenses</string>
        <string name="delete_order">Delete the order</string>
        <string name="delete_content">Delete the order</string>
        <string name="ticket_confirmation">Ticket confirmation</string>
        <string name="refund_instructions_des">1.30 minutes before departure ticket (30 min) or higher, each ticket will be deducted %s booking fee;\n 2.Full payment will be deducted within 29 minutes (0 &#60; 29min) before departure. After the bus leaves, the ticket cannot be refunded.</string>
        <string name="view_order">View Order</string>
        <string name="complete">Complete</string>
        <string name="your_wallet_balance">Your wallet balance</string>
        <string name="payment_success">Payment success！</string>
        <string name="refund_success">Refund success！</string>
        <string name="refund_fail">Refund failed!\nThe system is busy, please try again later.</string>
        <string name="payment_fail">Payment failure\nThe network is not stable, paease try\nagain later!</string>
        <string name="payment_method">Payment Method</string>
        <string name="payment_amount">Payment amount</string>
        <string name="confirm_payment">Confirm Payment</string>
        <string name="confirm">Confirm</string>
        <string name="review_purchase">Review Purchase</string>
        <string name="payment">PAYMENT</string>
        <string name="total">TOTAL</string>
        <string name="important_notes">IMPORTANT NOTES</string>
        <string name="license_plate_no">License plate No.</string>
        <string name="search_routes">Search Routes</string>
        <string name="buy">buy</string>
        <string name="ticket_price">Ticket price</string>
        <string name="start_location_preview"> Pick up address</string>
        <string name="end_location_preview">Drop off address</string>
        <string name="book">Book</string>
        <string name="pay">Pay</string>
        <string name="my_trips">My trips</string>
        <string name="city">Manila</string>
        <string name="log_in">log in</string>
        <string name="log_out">log out</string>
        <string name="agree_text">You have read and agree</string>
        <string name="service_agreement">《User service agreement》</string>
        <string name="please_input_correct_phone_number">Please enter the correct phone number</string>
        <string name="input_correct_phone">The current mobile phone number does not match the mobile phone number that obtained the verification code</string>
        <string name="not_get_code">You have not yet obtained a verification code</string>
        <string name="getting">Getting...</string>
        <string name="logging">logging in...</string>
        <string name="id">ID:%s</string>
        <string name="person_info">Personal information</string>
        <string name="main_item_list">Message,Service tel,Help center,About us,Current version,Terms &#38; Conditions</string>
        <string name="person_info_item_list">Mobile phone no.,Nickname,E-mail,Date of birth,Gender,Region</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="bind_phone_number_title">Bind phone number</string>
        <string name="phone_number">phone number</string>
        <string name="bind_phone_number">Bind phone number</string>
        <string name="replace_the_binding_title">Replace the binding</string>
        <string name="detected_latest_version">Detected the latest version</string>
        <string name="btn_cancle">Cancel</string>
</resources>