<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff"
        android:orientation="vertical">

        <!--邮箱-->
        <EditText
            android:id="@+id/etEmail"
            style="@style/edit_text_style"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:lines="1"
            android:hint="@string/enter_email_address" />

        <!--邮箱验证码-->
        <LinearLayout
            style="@style/common_layout_style"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:orientation="horizontal"
            android:padding="0dp">

            <EditText
                android:id="@+id/etEmailCode"
                style="@style/edit_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:digits="1234567890"
                android:hint="@string/enter_security_code"
                android:inputType="number"
                android:lines="1"
                android:paddingRight="0dp" />

            <Button
                android:id="@+id/btnEmailCode"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="0dp"
                android:text="@string/get_code" />


        </LinearLayout>


        <Button
            android:id="@+id/btnBinding"
            style="@style/button_style"
            android:layout_marginTop="23dp"
            android:gravity="center"
            android:text="@string/binding" />
    </LinearLayout>
</layout>