<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f1f1f4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:layout_marginTop="1dp"
            android:background="@color/color_ffffff"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_unit"
                    android:textColor="@color/color_2196f3"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_000000"
                    android:textSize="28sp"
                    tools:text="1525.50" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/wallet_balance"
                android:textColor="@color/color_666666"
                android:textSize="16sp" />

            <TextView
                android:layout_width="123dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/wallet_bg"
                android:gravity="center"
                android:text="@string/wallet_withdrawal"
                android:textColor="@color/color_2196f3"
                android:textSize="16sp" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rlQrCode"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="19dp"
                android:text="@string/wallet_qrcode"
                android:textColor="@color/color_000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="17dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlIncomeRecord"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="19dp"
                android:text="@string/wallet_income_record"
                android:textColor="@color/color_000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="17dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_ffffff">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:background="@color/color_eaeaea" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/color_ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="19dp"
                android:text="@string/wallet_withdrawals_record"
                android:textColor="@color/color_000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="17dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="19dp"
                android:text="@string/wallet_bank_card"
                android:textColor="@color/color_000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="11dp"
                android:layout_marginStart="19dp"
                android:layout_toStartOf="@+id/imgBankArrow"
                android:text="@string/wallet_bank_card"
                android:textColor="@color/color_666666"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imgBankArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="17dp"
                android:src="@drawable/arrow_right" />
        </RelativeLayout>

    </LinearLayout>
</layout>