<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@color/color_ffffff"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/tab1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <ImageView
                    android:id="@+id/tab1Img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tab_1" />

                <TextView
                    android:id="@+id/tab1Title"
                    style="@style/tab_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_title_1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <ImageView
                    android:id="@+id/tab2Img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tab_2" />

                <TextView
                    android:id="@+id/tab2Title"
                    style="@style/tab_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_title_2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <ImageView
                    android:id="@+id/tab3Img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tab_3" />

                <TextView
                    android:id="@+id/tab3Title"
                    style="@style/tab_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_title_3" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>